# event-store

./: .eslintrc  .gitignore  .prettierrc.yaml  README.md  db.sql  docker-compose.yml  integrationsetup.ts  package-lock.json  package.json  post-publish.sh  test.sql  tsconfig.json  tslint.json
.circleci/: config.yml
config/: custom-environment-variables.json  default.json
doc/: index.html
doc/0.1.2/: globals.html  index.html
doc/0.1.2/classes/: duplicateerror.html  eventstore.html
doc/0.1.2/interfaces/: cacheadapter.html  cacheentry.html  emitteradapter.html  event.html  eventcontext.html  eventdata.html  eventreplayrequested.html  eventstoreoptions.html  irisoptions.html  logger.html  pgquery.html  storeadapter.html
doc/0.1.3-0/: globals.html  index.html
doc/0.1.4-1/: globals.html  index.html
doc/0.1.4-2/: globals.html  index.html
doc/0.1.4-3/: globals.html  index.html
doc/0.1.4-4/: globals.html  index.html
doc/0.1.5/: globals.html  index.html
doc/0.1.6/: globals.html  index.html
doc/0.1.7/: globals.html  index.html
doc/0.2.0/: globals.html  index.html
doc/0.2.1/: globals.html  index.html
doc/0.2.2/: globals.html  index.html
doc/0.2.3/: globals.html  index.html
doc/0.3.0/: globals.html  index.html
doc/0.3.1/: globals.html  index.html
src/: browser.ts  event-store.test.ts  event-store.ts  helpers.test.ts  helpers.ts  index.integration.ts  index.test.ts  index.ts  integrationsetup.ts  logger.ts  test-helpers.ts  types.ts
src/adapters/: index.ts
unifier/: Cargo.toml  README.md
unifier/src/: config.rs  event.rs  main.rs
(+215 files in other folders)
