[package]
name = "unifier"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
serde = "1.0.90"
toml = "0.5.0"
serde_derive = "1.0.90"
structopt = "0.2.15"
serde_json = "1.0.39"
log = "0.4.6"
pretty_env_logger = "0.3.0"

[dependencies.postgres]
version = "0.15.2"
features = ["with-serde_json", "with-uuid", "with-chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.5.1"
features = ["serde", "v4"]
